--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         <!-- <script src="js/app18.js"></script> -->
         <!-- <script src="js/app19.js"></script> -->
         <!-- <script src="js/app20.js"></script> -->
-        <script src="js/app21.js"></script>
+        <!-- <script src="js/app21.js"></script> -->
+        <!-- <script src="js/app22.js"></script> -->
+        <!-- <script src="js/app23.js"></script> -->
+        <!-- <script src="js/app24.js"></script> -->
+        <script src="js/app25.js"></script>
 
     </body>
 </html>
